feat: Improve Adalight stability and add protocol support
This commit significantly enhances the Adalight connection type by improving stability, introducing a new Arduino sketch, and adding support for multiple serial protocols. It also includes several UX and performance improvements for capture quality and USB handling.

### Adalight Enhancements
- **New Adalight Arduino Sketch:** A new, more robust Arduino sketch (`adalight-sketch.ino`) has been added.
  - It features a state-machine-based parser that can handle multiple protocols: `ADA`, `AWA` (Hyperserial), and `LBAPA`.
  - The sketch automatically detects the protocol, preventing stream desynchronization by always consuming the full packet length defined in the header.
  - Includes a watchdog timer to reset on broken streams and a startup light sequence for diagnostics.

- **Multi-Protocol Support in App:** The `AdalightClient` now supports selecting different serial protocols (`ADA`, `AWA`, `LBAPA`) to match the connected hardware's firmware. The client has been updated to correctly build packets for each protocol.

- **Auto-Throttling for Stability:** The `AdalightClient` now implements an auto-throttling mechanism. It dynamically adjusts the data sending frequency based on the baud rate and packet size. This prevents buffer overflows on the Arduino, which previously caused desynchronization and flickering, especially with a high number of LEDs.

### USB Permission Handling
- **Proactive USB Permission Requests:** A new `UsbSerialPermissionHelper` has been introduced to streamline the user experience for Adalight.
  - The app now proactively requests USB permission for a connected serial device when the app is opened or when the device is attached while the app is in the foreground.
  - When starting the ambient light via a shortcut, quick tile, or on boot, the app now requests USB permission *before* requesting screen capture permission, avoiding a "tap twice" scenario.

### Capture Quality and Settings
- 

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -131,12 +131,20 @@
     <item>Среднее (128px)</item>
     <item>Высокое (256px)</item>
     <item>Ультра (512px)</item>
+    <item>720p (нестаб.)</item>
+    <item>1080p (нестаб.)</item>
+    <item>1440p (нестаб.)</item>
+    <item>2160p (нестаб.)</item>
   </string-array>
   <string-array name="pref_list_capture_quality_values">
     <item>64</item>
     <item>128</item>
     <item>256</item>
     <item>512</item>
+    <item>720</item>
+    <item>1080</item>
+    <item>1440</item>
+    <item>2160</item>
   </string-array>
   <!-- General settings -->
   <string name="pref_group_general">Общие</string>
